# gepa-ii-agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build_and_release.yml  run_tests.yml
.github/workflows/build_utils/: test_version.py
assets/: annotated_aime_prompt.html
gepa/: dspy_gepa.py  instruction_proposal.py
gepa/gepa/: entropy_utils.py  gepa.py  gepa_utils.py  instruction_proposal.py  logger.py  merge_programs.py
gepa_terminus_split_trial_2/: test_after_opt.json  test_baseline_empty.json  test_baseline_seed.json  train_filtered_summary.json
gepa_terminus_split_trial_2/generated_best_outputs_valset/task_4/: iter_1_prog_1.json
gepa_terminus_split_trial_2/generated_best_outputs_valset/task_7/: iter_1_prog_1.json
src/gepa/: __init__.py  api.py  gepa.py  gepa_utils.py
src/gepa/adapters/: README.md  default_adapter.py
src/gepa/adapters/anymaths_adapter/: README.md  __init__.py  anymaths_adapter.py
src/gepa/adapters/default_adapter/: default_adapter.py
src/gepa/adapters/dspy_adapter/: dspy_adapter.py
src/gepa/adapters/dspy_full_program_adapter/: dspy_program_proposal_signature.py  (+1 more)
src/gepa/core/: engine.py  state.py
src/gepa/examples/: aime.py
src/gepa/logging/: experiment_tracker.py  mlflow_utils.py  utils.py
src/gepa/strategies/: component_selector.py  instruction_proposal.py
tests/: test_experiment_tracking.py  test_import.py  test_module_selector.py
tests/test_aime_prompt_optimization/: cache.json  llm_cache.json  optimized_prompt.txt  test_aime_prompt_optimize.py
(+15 files in other folders)
