[project]
name = "gepa"
version = "0.0.1"
description = "GEPA is a novel prompt optimizers that uses text feedback to improve compound AI systems."
authors = [
  { name = "Lakshya A Agrawal", email = "lakshyaaagrawal@berkeley.edu" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10, <3.14"

[project.optional-dependencies]
wandb = ["wandb"]

[tool.setuptools.packages.find]
where = ["src"]