[build-system]
requires = ["setuptools>=77.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "gepa"
version = "0.0.1"
description = "A framework for optimizing textual system components (AI prompts, code snippets, etc.) using LLM-based reflection and Pareto-efficient evolutionary search."
readme = "README.md"
authors = [
  { name = "Lakshya A Agrawal", email = "lakshyaaagrawal@berkeley.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.10, <3.14"

dependencies = [
    "litellm>=1.64.0; extra != 'dspy'",
    "datasets>=2.14.6; extra != 'dspy'"
]

[project.optional-dependencies]
wandb = ["wandb"]
dspy = []

[project.urls]
"Homepage" = "https://github.com/gepa-ai/gepa"
"Bug Tracker" = "https://github.com/gepa-ai/gepa/issues"

[tool.setuptools.packages.find]
where = ["src"]